--- a/app/assets/stylesheets/index/_schedule.sass
+++ b/app/assets/stylesheets/index/_schedule.sass
@@ -229,6 +229,9 @@
   top: 25px
   vertical-align: middle
   width: 40px
+  i
+    display: block
+    padding-top: 9px
 
 @media (max-width: 991px)
   .schedule .tab-content .img-responsive
