--- a/app/views/index/sections/_schedule.html.erb
+++ b/app/views/index/sections/_schedule.html.erb
@@ -4,8 +4,8 @@
     <div class="content">
       Agenda
       <div class="sub header">
-        Confira toda a programação da VI Semana Acadêmica de Ciência da Computação!
-        <br><small>Programação sujeita a mudanças</small>
+        Confira toda a programação da VI Semana Acadêmica de Ciência da Computação!<br>
+        <small>Programação sujeita a mudanças</small>
       </div>
     </div>
   </h1>
@@ -30,7 +30,7 @@
             </li>
             <li class="">
               <a href="#schedule-day-2">
-                <h5 class="highlight">Como a UFFS contribuição com a Ciência da Computação?</h5>
+                <h5 class="highlight">Como a UFFS contribui com a Ciência da Computação?</h5>
                 <p class="text-alt">20/11/2018</p>
               </a>
             </li>
@@ -42,13 +42,13 @@
             </li>
             <li class="">
               <a href="#schedule-day-4">
-                <h5 class="highlight">Mercado de Trabalho e Computação.</h5>
+                <h5 class="highlight">Mercado de Trabalho e Computação</h5>
                 <p class="text-alt">22/11/2018</p>
               </a>
             </li>
             <li class="">
               <a href="#schedule-day-5">
-                <h5 class="highlight">Mulheres, Computação e Técnologia</h5>
+                <h5 class="highlight">Mulheres, Computação e Tecnologia</h5>
                 <p class="text-alt">23/11/2018</p>
               </a>
             </li>
