--- a/app/views/index/sections/schedule_days/_day_1.html.erb
+++ b/app/views/index/sections/schedule_days/_day_1.html.erb
@@ -56,22 +56,21 @@
           title: 'Shell Script',
           time: '19:00 - 20:30',
           place: 'LAB 402 B',
-          descricao: 'Shell script é uma linguagem script usada em vários sistemas operativos, possuindo também difersos interpretadores como o bash, usado na maioria das ditribuições GNU/Linux.
-                      O objetivo desse workshop é entender a estrutura de um script shell e iniciar a construção de seus primeiros scripts usando diversas ferramentas que uma distribuição GNU/Linux pode te oferecer. '
+          descricao: 'Shell script é uma linguagem script usada em vários sistemas operativos, possuindo também difersos interpretadores como o bash, usado na maioria das ditribuições GNU/Linux. O objetivo desse workshop é entender a estrutura de um script shell e iniciar a construção de seus primeiros scripts usando diversas ferramentas que uma distribuição GNU/Linux pode te oferecer. '
         %>
 
         <!-- =============================================================================== -->
         <!-- =============================================================================== -->
         <!-- =============================================================================== -->
 
-        <div class="ui hidden divider"></div>
+        <!-- <div class="ui hidden divider"></div>
         <div class="panel schedule-item">
           <div class="schedule-item-body">
             <h2><i class="icon-microphone"></i> Atividades</h2>
           </div>
         </div>
 
-        <!-- <%= render 'index/sections/schedule_days/template',
+        <%#= render 'index/sections/schedule_days/template',
           image: image_tag('speakers/emilio.jpg', class: 'img-responsive', width: '100%'),
           speaker: 'Emílio Wuerges',
           title: 'Cinedebates: As maravilhas da lógica',
