--- a/app/views/index/sections/schedule_days/_day_3.html.erb
+++ b/app/views/index/sections/schedule_days/_day_3.html.erb
@@ -18,7 +18,7 @@
           title: 'Dívida técnica',
           time: '13:30 - 15:00',
           place: 'Auditório bloco B',
-          descricao: 'Dívida técnica é a soma de alguns tipos de pendências no seu projeto que podem impedir a evolução do mesmo. Entretanto, esse conceito é muito mais abrangente do que isso, por isso a Profº Grazilea Tonin irá esclarecer melhor sobre esse assunto.'
+          descricao: 'Dívida técnica é a soma de alguns tipos de pendências no seu projeto que podem impedir a evolução do mesmo. Entretanto, esse conceito é muito mais abrangente do que isso, por isso a Profº Graziela Tonin irá esclarecer melhor sobre esse assunto.'
         %>
 
         <!-- =============================================================================== -->
@@ -47,21 +47,21 @@
           title: 'Workshop Latex',
           time: '19:00 - 20:30',
           place: 'LAB 402 B',
-          descricao: 'Sem mais sufoco para formatações de trabalhos, articos, monografias e muitos mais com essa ferramenta PODEROSSÍMA!'
+          descricao: 'Sem mais sufoco para formatações de trabalhos, artigos, monografias e muitos mais com essa ferramenta PODEROSÍSSIMA!'
         %>
 
         <!-- =============================================================================== -->
         <!-- =============================================================================== -->
         <!-- =============================================================================== -->
 
-        <div class="ui hidden divider"></div>
+        <!-- <div class="ui hidden divider"></div>
         <div class="panel schedule-item">
           <div class="schedule-item-body">
             <h2><i class="icon-microphone"></i> Atividades</h2>
           </div>
         </div>
 
-        <!-- <%= render 'index/sections/schedule_days/template',
+        <%#= render 'index/sections/schedule_days/template',
           image: image_tag('speakers/denioduarte.jpg', class: 'img-responsive', width: '100%'),
           speaker: 'Profº Denio Duarte',
           title: 'Cinedebate: Big Data e o Poder da Informação',
