--- a/app/views/index/sections/schedule_days/_day_4.html.erb
+++ b/app/views/index/sections/schedule_days/_day_4.html.erb
@@ -18,15 +18,16 @@
           title: 'Como se tornar relevante na área de TI sem ser um Rockstar',
           time: '13:30 - 15:00',
           place: '',
-          descricao: 'Desenvolvedor, instrutor e criador de conteúdo na Alura e grupo Caelum,'
+          descricao: 'Desenvolvedor, instrutor e criador de conteúdo na Alura e grupo Caelum'
         %>
+
         <%= render 'index/sections/schedule_days/template',
           image: '<i class="icon-people"></i>',
           speaker: 'Juliomar Marchetti',
           title: 'A realidade sobre as empresas de tecnologia em CCO',
           time: '19:30 - 21:00',
           place: '',
-          descricao: 'Conheça sobre a realidade sobre as empresas de tecnologia aqui na regiap de Chapecó.'
+          descricao: 'Conheça sobre a realidade sobre as empresas de tecnologia aqui na região de Chapecó.'
         %>
 
         <!-- =============================================================================== -->
@@ -46,7 +47,7 @@
           title: 'Programação com robótica',
           time: '13:00 - 17:00',
           place: 'LAB 402 B',
-          descricao: 'Dê os seus primeiros passos na Robotica!'
+          descricao: 'Dê os seus primeiros passos na Robótica!'
         %>
 
         <%= render 'index/sections/schedule_days/template',
