--- a/app/views/index/sections/schedule_days/_day_5.html.erb
+++ b/app/views/index/sections/schedule_days/_day_5.html.erb
@@ -18,19 +18,19 @@
           title: 'Tecnologia Assistiva: A favor da independência do ser humano',
           time: '15:30 - 17:00',
           place: '',
-          descricao: 'Conhece as tecnologias Assistivas? Não? Então venha conhecer, venhar descobri o que essa técnologia pode prover para uma grande mudança de paradigmas nas Humanidade'
+          descricao: 'Conhece as tecnologias assistivas? Não? Então venha conhecer, venhar descobrir o que essa tecnologia pode prover para uma grande mudança de paradigmas na humanidade'
         %>
 
         <!-- =============================================================================== -->
         <!-- =============================================================================== -->
         <!-- =============================================================================== -->
 
-        <div class="ui hidden divider"></div>
+        <%# <div class="ui hidden divider"></div>
         <div class="panel schedule-item">
           <div class="schedule-item-body">
             <h2><i class="icon-microphone"></i> Minicursos</h2>
           </div>
-        </div>
+        </div> %>
 
 
         <!-- =============================================================================== -->
@@ -45,8 +45,8 @@
         </div>
 
         <%= render 'index/sections/schedule_days/template',
-          image: image_tag('speakers/denioduarte.jpg', class: 'img-responsive', width: '100%'),
-          speaker: 'Denio Duarte',
+          image: '<i class="icon-trophy"></i>',
+          speaker: '',
           title: 'Campeonato de LOL',
           time: '13:30 - 17:00',
           place: 'LAB 405 B',
@@ -54,9 +54,9 @@
         %>
 
         <%= render 'index/sections/schedule_days/template',
-          image: '<i class="icon-people"></i>',
-          speaker: 'CACC UFFS',
-          title: 'Sorteio Rifa VI Semâna Acadêmica CC UFFS',
+          image: '<i class="icon-trophy"></i>',
+          speaker: '',
+          title: 'Sorteio Rifa VI Semana Acadêmica CC UFFS',
           time: '20:45 - 21:00',
           place: '402 B',
           descricao: 'Saiba mais sobre a área de simulação'
