--- a/app/views/index/sections/schedule_days/_template.html.erb
+++ b/app/views/index/sections/schedule_days/_template.html.erb
@@ -16,9 +16,11 @@
       <p class="description">
         <%= descricao %>
       </p>
-      <strong class="highlight speaker-name">
-        Palestrante: <%= speaker %>
-      </strong>
+      <% if speaker.present? %>
+        <strong class="highlight speaker-name">
+          Palestrante: <%= speaker %>
+        </strong>
+      <% end %>
 
     </article>
 
