Ajustes de layout e responsividade

--- a/app/assets/stylesheets/index.sass
+++ b/app/assets/stylesheets/index.sass
@@ -67,6 +67,8 @@
   background-size: cover
   padding: 100px
   margin-top: 0
+  @media(max-width: 768px)
+    padding: 20px
   h1.header
     padding-bottom: 40px
 
