--- a/app/views/users/account.html.erb
+++ b/app/views/users/account.html.erb
@@ -134,7 +134,7 @@
   </div>
 
   <div class="actions">
-    <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
+    <%= link_to 'Sair', destroy_user_session_path, method: :delete, class: 'ui button' %>
   </div>
 
 </div> <!-- Modal -->
