Adiciona data-disable-with nos botões dos modais para evitar envio duplo

--- a/app/views/partials/_modal_signup.html.erb
+++ b/app/views/partials/_modal_signup.html.erb
@@ -68,7 +68,7 @@
     <button class="ui button to-login">
       Já tenho cadastro
     </button>
-    <button type="submit" form="signup_form" class="ui green right labeled icon button">
+    <button type="submit" form="signup_form" class="ui green right labeled icon button" data-disable-with="Aguarde...">
       Inscrever
       <i class="checkmark icon"></i>
     </button>
