--- a/app/views/partials/_modal_login.html.erb
+++ b/app/views/partials/_modal_login.html.erb
@@ -33,7 +33,7 @@
     <button class="ui deny button">
       Voltar
     </button>
-    <button type="submit" form="login_form" class="ui green button">
+    <button type="submit" form="login_form" class="ui green button" data-disable-with="Aguarde...">
       Login
     </button>
   </div>
