atualização da programação

--- a/app/views/index/_header.html.erb
+++ b/app/views/index/_header.html.erb
@@ -8,7 +8,7 @@
     <a href="https://www.facebook.com/groups/CACCUFFSCCO/" target="_blank" class="no-decoration">
       <i class="icon-social-facebook"></i>
     </a>
-    <a href="https://uffs.cafe" class="no-decoration">
+    <a href="https://caccuffs.github.io" class="no-decoration">
       <i class="icon-globe"></i>
     </a>
   </section>
