--- a/app/views/index/sections/schedule_days/_day_2.html.erb
+++ b/app/views/index/sections/schedule_days/_day_2.html.erb
@@ -13,17 +13,8 @@
         </div>
 
         <%= render 'index/sections/schedule_days/template',
-          image: image_tag('speakers/paulobuker.jpg', class: 'img-responsive', width: '100%'),
-          speaker: 'Paulo Burke',
-          title: 'Computação na biologia? A bioinformática precisa de você!',
-          time: '13:30 - 15:00',
-          place: 'Auditório Bloco B',
-          descricao: 'Paulo Burke é Mestre em Ciências da Computação pela Universidade Federal de São Paulo, doutorando e representante discente do Programa de Pós-graduação em Bioinformática da USP. Suas pesquisas envolvem o desenvolvimento de modelos matemático-computacionais para simulação de sistemas bioquímicos complexos e redes biológicas.'
-        %>
-
-        <%= render 'index/sections/schedule_days/template',
           image: '<i class="icon-people"></i>',
-          speaker: 'ABNTigers',
+          speaker: 'ABNTTigers',
           title: 'Computação Competitiva',
           time: '13:30 - 15:00',
           place: 'Auditório Bloco B',
