--- a/app/views/index/sections/schedule_days/_day_5.html.erb
+++ b/app/views/index/sections/schedule_days/_day_5.html.erb
@@ -11,7 +11,14 @@
             <h2><i class="icon-microphone"></i> Palestras</h2>
           </div>
         </div>
-
+        <%= render 'index/sections/schedule_days/template',
+          image: image_tag('speakers/paulobuker.jpg', class: 'img-responsive', width: '100%'),
+          speaker: 'Paulo Burke',
+          title: 'Computação na biologia? A bioinformática precisa de você!',
+          time: '13:30 - 15:00',
+          place: '',
+          descricao: 'Paulo Burke é Mestre em Ciências da Computação pela Universidade Federal de São Paulo, doutorando e representante discente do Programa de Pós-graduação em Bioinformática da USP. Suas pesquisas envolvem o desenvolvimento de modelos matemático-computacionais para simulação de sistemas bioquímicos complexos e redes biológicas.'
+        %>
         <%= render 'index/sections/schedule_days/template',
           image: image_tag('speakers/amanda.jpg', class: 'img-responsive', width: '100%'),
           speaker: 'Amanda Groth',
@@ -45,21 +52,21 @@
         </div>
 
         <%= render 'index/sections/schedule_days/template',
-          image: image_tag('speakers/denioduarte.jpg', class: 'img-responsive', width: '100%'),
-          speaker: 'Denio Duarte',
+          image: '<i class="icon-trophy"></i>',
+          speaker: '',
           title: 'Campeonato de LOL',
           time: '13:30 - 17:00',
-          place: 'LAB 405 B',
-          descricao: 'Monte seu time e avante'
+          place: 'LAB 405 B e LAB 403',
+          descricao: 'Inscrições para quem tem uma equipe montada  neste <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-dCr28sbYmdRIOcZUz7nb4ZHR2wom8F5vJDF3IaKUoksj6w/viewform">link</a> e inscrições para que não tem equipe, mas quer participar neste <a href="https://docs.google.com/forms/d/e/1FAIpQLSdj3pMwqgnkGnqagsXoOMDeAwAwXo_AYXLhJ9c8gIeRJdEIuQ/viewform">link</a>'
         %>
 
         <%= render 'index/sections/schedule_days/template',
-          image: '<i class="icon-people"></i>',
+          image: '<i class="icon-trophy"></i>',
           speaker: 'CACC UFFS',
           title: 'Sorteio Rifa VI Semâna Acadêmica CC UFFS',
           time: '20:45 - 21:00',
-          place: '402 B',
-          descricao: 'Saiba mais sobre a área de simulação'
+          place: 'Auditório do Bloco dos Professores',
+          descricao: 'Quem será que ganhará todos os prêmios maravilosos da rifa VI Semana Acadêmica CC UFFS?'
         %>
 
       </div>
