--- a/app/views/index/sections/schedule_days/_day_1.html.erb
+++ b/app/views/index/sections/schedule_days/_day_1.html.erb
@@ -1,8 +1,8 @@
-<div id="schedule-day-1" class="tab-pane active">
+<div id="schedule-day-1" class="tab-pane ">
   <!-- Second level content start -->
   <div class="tab-content tab-content-schedule">
     <!-- Main content start -->
-    <div class="tab-pane active">
+    <div class="tab-pane ">
       <!-- Accordion start -->
       <div class="panel-group">
 
