--- a/app/views/index/sections/schedule_days/_day_3.html.erb
+++ b/app/views/index/sections/schedule_days/_day_3.html.erb
@@ -1,8 +1,8 @@
-<div id="schedule-day-3" class="tab-pane ">
+<div id="schedule-day-3" class="tab-pane active">
   <!-- Second level content start -->
   <div class="tab-content tab-content-schedule">
     <!-- Main content start -->
-    <div class="tab-pane">
+    <div class="tab-pane active">
       <!-- Accordion start -->
       <div class="panel-group">
 
