Ajuste localização das Salas das Atividades

--- a/app/views/index/sections/schedule_days/_day_3.html.erb
+++ b/app/views/index/sections/schedule_days/_day_3.html.erb
@@ -25,7 +25,7 @@
           speaker: 'Ana Marcia Debiasi Duarte',
           title: 'Dívida técnica',
           time: '19:30 - 21:00',
-          place: 'Auditório bloco B',
+          place: 'Sala 401 B',
           descricao: 'Saiba mais sobre Qualidade de software e certificações e trilhe uma grande carreira na área de T.I.'
         %>
 
@@ -62,23 +62,20 @@
         <!-- =============================================================================== -->
         <!-- =============================================================================== -->
 
-        <!-- <div class="ui hidden divider"></div>
+      <div class="ui hidden divider"></div>
         <div class="panel schedule-item">
           <div class="schedule-item-body">
             <h2><i class="icon-microphone"></i> Atividades</h2>
           </div>
         </div>
 
-<<<<<<< HEAD
+
         <%= render 'index/sections/schedule_days/template',
-=======
-        <%#= render 'index/sections/schedule_days/template',
->>>>>>> upstream/master
           image: image_tag('speakers/denioduarte.jpg', class: 'img-responsive', width: '100%'),
           speaker: 'Profº Denio Duarte',
           title: 'Cinedebate: Big Data e o Poder da Informação',
           time: '15:30 - 17:00',
-          place: 'SALA 401 B',
+          place: 'Auditório bloco B',
           descricao: 'Devemos nos preocupar com informações das nossas vidas expostas online? A matemática Hannah Fry desvenda o big data. E explica de forma simples e bem-humorada essa alta tecnologia que captura, armazena e compartilha tudo que fazemos no mundo virtual. A história começa com Claude Shannon, que, para acabar com os ruídos das linhas telefônicas, digitalizou o processo e criou a "Era da Informação.'
         %>
 
