--- a/app/views/index/sections/schedule_days/_day_4.html.erb
+++ b/app/views/index/sections/schedule_days/_day_4.html.erb
@@ -17,7 +17,7 @@
           speaker: 'Gabriel Ferreira',
           title: 'Como se tornar relevante na área de TI sem ser um Rockstar',
           time: '13:30 - 15:00',
-          place: '',
+          place: 'Auditório bloco B',
           descricao: 'Desenvolvedor, instrutor e criador de conteúdo na Alura e grupo Caelum'
         %>
 
@@ -26,7 +26,7 @@
           speaker: 'Juliomar Marchetti',
           title: 'A realidade sobre as empresas de tecnologia em CCO',
           time: '19:30 - 21:00',
-          place: '',
+          place: 'Sala 401 B',
           descricao: 'Conheça sobre a realidade sobre as empresas de tecnologia aqui na região de Chapecó.'
         %>
 
@@ -83,7 +83,7 @@
           speaker: 'Profº Marco Spohn',
           title: 'Cinedebate: Homem x Maquina',
           time: '15:30 - 17:00',
-          place: 'SALA 308 B',
+          place: 'Auditório bloco B',
           descricao: 'A internet não é mais somente uma rede de computadores e servidores. Agora ela está presente em objetos inteligentes que nos conhecem, sabem o que gostamos de comer e as músicas que gostamos de ouvir. São devices inusitados que nos escutam, nos influenciam e fazem parte das nossas vidas. Se a internet ganhou um corpo, até onde ela pode ir?'
         %>
 
