--- a/app/views/index/sections/schedule_days/_day_5.html.erb
+++ b/app/views/index/sections/schedule_days/_day_5.html.erb
@@ -16,7 +16,7 @@
           speaker: 'Paulo Burke',
           title: 'Computação na biologia? A bioinformática precisa de você!',
           time: '13:30 - 15:00',
-          place: '',
+          place: 'Sala 401 B',
           descricao: 'Paulo Burke é Mestre em Ciências da Computação pela Universidade Federal de São Paulo, doutorando e representante discente do Programa de Pós-graduação em Bioinformática da USP. Suas pesquisas envolvem o desenvolvimento de modelos matemático-computacionais para simulação de sistemas bioquímicos complexos e redes biológicas.'
         %>
         <%= render 'index/sections/schedule_days/template',
@@ -24,7 +24,7 @@
           speaker: 'Amanda Groth',
           title: 'Tecnologia Assistiva: A favor da independência do ser humano',
           time: '15:30 - 17:00',
-          place: '',
+          place: 'Sala 401 B',
           descricao: 'Conhece as tecnologias assistivas? Não? Então venha conhecer, venhar descobrir o que essa tecnologia pode prover para uma grande mudança de paradigmas na humanidade'
         %>
 
