atualização da programação

--- a/app/views/index/sections/schedule_days/_day_5.html.erb
+++ b/app/views/index/sections/schedule_days/_day_5.html.erb
@@ -16,7 +16,7 @@
           speaker: 'Paulo Burke',
           title: 'Computação na biologia? A bioinformática precisa de você!',
           time: '13:30 - 15:00',
-          place: 'Sala 401 B',
+          place: 'Sala 309 B',
           descricao: 'Paulo Burke é Mestre em Ciências da Computação pela Universidade Federal de São Paulo, doutorando e representante discente do Programa de Pós-graduação em Bioinformática da USP. Suas pesquisas envolvem o desenvolvimento de modelos matemático-computacionais para simulação de sistemas bioquímicos complexos e redes biológicas.'
         %>
         <%= render 'index/sections/schedule_days/template',
@@ -24,7 +24,7 @@
           speaker: 'Amanda Groth',
           title: 'Tecnologia Assistiva: A favor da independência do ser humano',
           time: '15:30 - 17:00',
-          place: 'Sala 401 B',
+          place: 'Sala 309 B',
           descricao: 'Conhece as tecnologias assistivas? Não? Então venha conhecer, venhar descobrir o que essa tecnologia pode prover para uma grande mudança de paradigmas na humanidade'
         %>
 
@@ -56,8 +56,8 @@
           speaker: '',
           title: 'Campeonato de LOL',
           time: '13:30 - 17:00',
-          place: 'LAB 405 B e LAB 403',
-          descricao: 'Inscrições para quem tem uma equipe montada  neste <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-dCr28sbYmdRIOcZUz7nb4ZHR2wom8F5vJDF3IaKUoksj6w/viewform">link</a> e inscrições para que não tem equipe, mas quer participar neste <a href="https://docs.google.com/forms/d/e/1FAIpQLSdj3pMwqgnkGnqagsXoOMDeAwAwXo_AYXLhJ9c8gIeRJdEIuQ/viewform">link</a>'
+          place: 'LAB 405 B e LAB 402',
+          descricao: 'Inscrições para quem tem uma equipe montada  neste link: https://docs.google.com/forms/d/e/1FAIpQLSd-dCr28sbYmdRIOcZUz7nb4ZHR2wom8F5vJDF3IaKUoksj6w/viewform e inscrições para que não tem equipe, mas quer participar neste link: https://docs.google.com/forms/d/e/1FAIpQLSdj3pMwqgnkGnqagsXoOMDeAwAwXo_AYXLhJ9c8gIeRJdEIuQ/viewform'
         %>
 
         <%= render 'index/sections/schedule_days/template',
