--- a/app/views/index/sections/schedule_days/_day_3.html.erb
+++ b/app/views/index/sections/schedule_days/_day_3.html.erb
@@ -1,8 +1,8 @@
-<div id="schedule-day-3" class="tab-pane active">
+<div id="schedule-day-3" class="tab-pane ">
   <!-- Second level content start -->
   <div class="tab-content tab-content-schedule">
     <!-- Main content start -->
-    <div class="tab-pane active">
+    <div class="tab-pane ">
       <!-- Accordion start -->
       <div class="panel-group">
 
@@ -23,9 +23,9 @@
         <%= render 'index/sections/schedule_days/template',
           image: '<i class="icon-people"></i>',
           speaker: 'Ana Marcia Debiasi Duarte',
-          title: 'Dívida técnica',
+          title: 'Qualidade de software e certificações',
           time: '19:30 - 21:00',
-          place: 'Sala 401 B',
+          place: 'Sala 309 B',
           descricao: 'Saiba mais sobre Qualidade de software e certificações e trilhe uma grande carreira na área de T.I.'
         %>
 
