--- a/app/views/index/sections/schedule_days/_day_4.html.erb
+++ b/app/views/index/sections/schedule_days/_day_4.html.erb
@@ -1,8 +1,8 @@
-<div id="schedule-day-4" class="tab-pane ">
+<div id="schedule-day-4" class="tab-pane active">
   <!-- Second level content start -->
   <div class="tab-content tab-content-schedule">
     <!-- Main content start -->
-    <div class="tab-pane">
+    <div class="tab-pane active">
       <!-- Accordion start -->
       <div class="panel-group">
 
@@ -26,7 +26,7 @@
           speaker: 'Juliomar Marchetti',
           title: 'A realidade sobre as empresas de tecnologia em CCO',
           time: '19:30 - 21:00',
-          place: 'Sala 401 B',
+          place: 'Sala 309 B',
           descricao: 'Conheça sobre a realidade sobre as empresas de tecnologia aqui na região de Chapecó.'
         %>
 
@@ -74,8 +74,8 @@
           speaker: '',
           title: 'Campeonato de LOL',
           time: '13:30 - 17:00',
-          place: 'LAB 405 B e LAB 403',
-          descricao: 'Inscrições para quem tem uma equipe montada  neste <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-dCr28sbYmdRIOcZUz7nb4ZHR2wom8F5vJDF3IaKUoksj6w/viewform">link</a> e inscrições para que não tem equipe, mas quer participar neste <a href="https://docs.google.com/forms/d/e/1FAIpQLSdj3pMwqgnkGnqagsXoOMDeAwAwXo_AYXLhJ9c8gIeRJdEIuQ/viewform">link</a>'
+          place: 'LAB 405 B e LAB 402',
+          descricao: 'Inscrições para quem tem uma equipe montada  neste link: https://docs.google.com/forms/d/e/1FAIpQLSd-dCr28sbYmdRIOcZUz7nb4ZHR2wom8F5vJDF3IaKUoksj6w/viewform e inscrições para que não tem equipe, mas quer participar neste link: https://docs.google.com/forms/d/e/1FAIpQLSdj3pMwqgnkGnqagsXoOMDeAwAwXo_AYXLhJ9c8gIeRJdEIuQ/viewform'
         %>
 
         <%= render 'index/sections/schedule_days/template',
